test/core/errors/constants_error/zs/wrong_bool_constant_error.zs
package wrong_bool_constant_error;

const bool WRONG_BOOL_CONSTANT = 1;
